@@ -1,6 +1,6 @@
 f3df4332 size=66      mtime=1091540434 ./.gdbinit
-00000000 size=4096    mtime=1400883025 ./.git
-d5539b09 size=14652   mtime=1400882721 ./Changes
+00000000 size=4096    mtime=1401552805 ./.git
+5ccb36c6 size=14821   mtime=1401539890 ./Changes
 181fd85a size=25551   mtime=1377640233 ./README
 2821fbbd size=2816    mtime=1267906051 ./README.2010
 992cfa7b size=752     mtime=1221388987 ./README.fcterm
@@ -8,6 +8,7 @@ d5539b09 size=14652   mtime=1400882721 ./Changes
 c3f39024 size=12403   mtime=958296553 ./Xdefaults
 0b8a1365 size=256     mtime=798888793 ./colors.def
 8612e1f2 size=104     mtime=1266613484 ./colors.sh
+e74f65f5 size=1249917 mtime=1401536542 ./ctw.s
 40697125 size=1007    mtime=794877761 ./ctw.sh
 11420258 size=357931  mtime=1169593899 ./doc/all-escapes.txt
 71536ab9 size=78845   mtime=1345911880 ./doc/ctlseqs.txt
@@ -15,7 +16,7 @@ c3f39024 size=12403   mtime=958296553 ./Xdefaults
 86ae103c size=231     mtime=1312231261 ./fccat
 cc143aa6 size=2480    mtime=887227412 ./fcterm.bitmap
 eee5bd46 size=3949    mtime=1287247446 ./fcterm.xpm
-03fd21fe size=162     mtime=1400882711 ./include/build.h
+29c4d4c4 size=162     mtime=1401539872 ./include/build.h
 5f5d5892 size=432     mtime=1267915971 ./include/code.h
 7e6e0965 size=19224   mtime=1400882913 ./include/ctw.h
 5589e233 size=9718    mtime=1400882841 ./include/ctwP.h
@@ -48,7 +49,7 @@ f0253d81 size=533     mtime=1310851465 ./machines/linux-x86_32.sh
 403bdbb9 size=317     mtime=937912779 ./machines/unixware21.sh
 27a32063 size=247     mtime=935265192 ./machines/unixware7.sh
 d52aa165 size=2664    mtime=1341870106 ./macos/main.m
-16b68c57 size=4264    mtime=1377640063 ./makefile
+364c52af size=4424    mtime=1401540191 ./makefile
 3a97a655 size=71255   mtime=794877763 ./misc/aixterm
 4902012e size=403     mtime=1267468714 ./mkcode.sh
 7497b5c3 size=7545    mtime=1351551202 ./mkseq.sh
@@ -65,7 +66,7 @@ b1197941 size=162     mtime=1267481650 ./samples/graphs
 149abf77 size=57      mtime=1267574279 ./samples/rect
 7f872666 size=388     mtime=1267574353 ./samples/rect.pl
 623fd7c0 size=2066    mtime=1267574421 ./samples/smaps.pl
-183c5fde size=255241  mtime=1400882951 ./src/ctw.c
+a5118278 size=255003  mtime=1401539848 ./src/ctw.c
 e3ecc6dd size=65002   mtime=1385288433 ./src/fcterm.c
 aea56fd6 size=27652   mtime=1220482375 ./src/fmcterm.c
 8414adc6 size=8718    mtime=1344251620 ./src/keyboard.c
@@ -75,7 +76,7 @@ bef69b22 size=35872   mtime=1341869848 ./src/ptysrv.c
 e8f99e50 size=2138    mtime=1341765405 ./src/rotate.c
 25bfc059 size=23367   mtime=1390684782 ./src/scrbar.c
 9b5dde01 size=336     mtime=1220482376 ./src/t.c
-1f76c86b size=65136   mtime=1341768368 ./src/term.c
+71b0971d size=65256   mtime=1401540168 ./src/term.c
 d5534b35 size=1945    mtime=1233095977 ./src/xft.c
 42f10135 size=431     mtime=863120235 ./xpm/darrow1.xpm
 99c6cc3a size=418     mtime=863120441 ./xpm/darrow2.xpm
